# Noteshapp

./: ARCHITECTURE.md  LICENSE  README.md  TECHNICAL_REPORT.md  build_app.bat  implementation_plan.md
studylens/: .gitignore  README.md  test_server.py
studylens-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
studylens-desktop/src/: App.tsx  index.css  main.tsx
studylens-desktop/src-tauri/: Cargo.toml  tauri.conf.json
studylens-desktop/src-tauri/capabilities/: default.json
studylens-desktop/src-tauri/src/: lib.rs  main.rs
studylens-desktop/src/components/: ExcalidrawExtension.tsx  Sidebar.tsx
studylens-desktop/src/hooks/: useDebounce.ts
studylens-desktop/src/layouts/: AppLayout.tsx
studylens-desktop/src/routes/: AppRoutes.tsx
studylens-desktop/src/services/: api.ts
studylens-desktop/src/stores/: useAIPlanStore.ts  useCapsulesStore.ts  useDashboardStore.ts  useGrowthStore.ts  (+3 more)
studylens/app/: build.py  installer.iss  requirements_app.txt  studylens.spec  studylens_tray.py
studylens/backend/: backend-debug.spec  backend-x86_64-pc-windows-msvc.spec  classifier.py  database.py  main.py  models.py  ollama_client.py  plan_ai.py  requirements.txt  run_backend.py  run_out.txt  setup_ai.py
studylens/data/: dataset_raw.csv  fasttext_train.txt  fasttext_valid.txt
studylens/extension/: README.md  background.js  content_ai_chat.js  content_website.js  content_youtube.js  manifest.json  yt_api.js
studylens/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+36 files in other folders)
